[package]
name = "trivia-retriever"
version = "0.1.5"
edition = "2021"

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = '0.10', features = ["vendored"] }

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
